# KubeForge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  flowchart TD.mmd
migrations/: 001_initial.down.sql  001_initial.up.sql  002_helm_support.down.sql  002_helm_support.up.sql  003_fix_generated_manifests.down.sql  003_fix_generated_manifests.up.sql  004_fix_deployments.down.sql  004_fix_deployments.up.sql  005_fix_images_table.down.sql  005_fix_images_table.up.sql
src/kubeforge/: __init__.py  __main__.py  app.py  bootable_iso.py  cli.py  config.py  events.py  generator.py  image_puller.py  iso_builder.py  k3s_downloader.py  orchestrator.py  packager.py  resolver.py  version.py
src/kubeforge/ai/: __init__.py  detector.py  ollama.py  recommendations.py  risk.py
src/kubeforge/ai/knowledge/: __init__.py  indexer.py  (+2 more)
src/kubeforge/api/: __init__.py  analysis.py  artifacts.py  deploy.py  manifests.py  packages.py  projects.py
src/kubeforge/db/: __init__.py  analyses.py  artifacts.py  deployments.py  engine.py  images.py  projects.py
src/kubeforge/models/: __init__.py  manifest.py
src/kubeforge/parsers/: __init__.py  base.py  compose.py  helm.py  kubernetes.py
tests/: test_generator.py  test_helm_parser.py  test_parsers.py
tests/testdata/compose/: wordpress.yaml
tests/testdata/kube/: insecure.yaml
