[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeforge"
version = "0.1.0"
description = "K3s Deployment Platform — convert Compose/Helm/K8s manifests to production-ready air-gap ISOs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "aiosqlite>=0.20,<1",
    "typer[all]>=0.12,<1",
    "rich>=13,<14",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ai = [
    "qdrant-client>=1.9,<2",
]
iso = [
    "pycdlib>=1.14",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
kubeforge = "kubeforge.cli:app"
kfctl = "kubeforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kubeforge"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
# Allow missing stubs for third-party packages used in CI/dev
ignore_missing_imports = true
# Allow untyped defs in many helper scripts (gradual typing)
disallow_untyped_defs = false
